--- a/poetry-magazine.html
+++ b/poetry-magazine.html
@@ -1669,6 +1669,63 @@
                     "昼短染指清梦，枥少再铨高门。",
                     "冬风未冷金樽酒，春来谁顾累土声，一去了无痕。"
                 ]
+            },
+            {
+                id: 27,
+                title: "冬至夜书",
+                author: "叶小耕",
+                content: [
+                    "去年冬至日，晚空寒星流。",
+                    "相约铃音后，片语明如昼。",
+                    "兜转又春秋，霜与沙依旧。",
+                    "渺然一薄酒，夜久浸衣袖。"
+                ]
+            },
+            {
+                id: 28,
+                title: "南乡子·隙语道流光",
+                author: "叶小耕",
+                content: [
+                    "隙语道流光。几度尘灰共影长。一十二年多少事？苍苍。墨渍残卷梦几行。",
+                    "铃响碎空廊，漫沁书扉页泛黄。此心归去安何处？斜阳。夏夜蝉鸣白月光。"
+                ]
+            },
+            {
+                id: 29,
+                title: "中秋杂咏",
+                author: "叶小耕",
+                content: [
+                    "圆蟾出九重，清光泻梧桐。",
+                    "双亲倚杖望云空。",
+                    "忽忆少年曾捕流萤，鬓边今已秋意浓。",
+                    "华灯耀朱栊，桂子落晚风。",
+                    "稚子擎盘过花丛。",
+                    "笑指玉兔躲入冰轮，银辉跳进酒盏中。",
+                    "佳肴列玉盘，羹汤泛乳泓。",
+                    "阿姊举箸说旧容。",
+                    "那年菱角剥落指缝，月光浸透青石垄。",
+                    "阖家聚堂中，欢语震帘栊。",
+                    "快门声定影朦胧。",
+                    "檐角旧燕识得团圆，穿梁又画半轮弓。",
+                    "今宵月正满，情寄山海盟。",
+                    "长风送我意千重。",
+                    "愿得年年此夜，清辉共照归鸿踪。"
+                ]
+            },
+            {
+                id: 30,
+                title: "水调歌头·AI世感怀",
+                author: "奇",
+                content: [
+                    "万壑奔涛急，斗室独深吟。",
+                    "蓬莱莫过如许，弹指化神奇。",
+                    "画角残更寒彻，陈迹烟埋万里，霜夜意难禁。",
+                    "兴废空回首，凉笛满遥林。",
+                    "兹刹那，彼须臾，怎堪瞑。",
+                    "快睹关河故垒，万象焕新晴。",
+                    "休叹平生蹉跎，莫计桑榆得失，高卧自起行。",
+                    "此身安然法，犹赋小诗心。"
+                ]
             }
         ];
 
