--- a/poetry-magazine.html
+++ b/poetry-magazine.html
@@ -1769,7 +1769,7 @@
                     <div class="cover-decoration" style="background-image: url('https://images.unsplash.com/photo-1513836279014-a89f7a76ae86?w=800');"></div>
                     <div class="cover-title-vertical">
                         <h1 class="cover-main-title">掬月诗集</h1>
-                        <div class="cover-subtitle">第一卷 · 友人诗选</div>
+                        <div class="cover-subtitle">第一卷 · 2025</div>
                     </div>
                     <div class="cover-seal">
                         <span>掬</span>
